<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jeu de piste</string>
    <string name="action_settings">Settings</string>
    <string name="lblchoix">Choisissez une ville</string>
    <string name="chercher">Chercher</string>
    <string name="selection">Selection</string>
    <string name="affiche">ici affichage</string>
     <string name="msgLoading">Chargement en cours</string>
    <string name="title_activity_rech_ville">Recherchez une ville</string>
    <string name="title_activity_rech_enigme">Parcourir les énigmes</string>
    <string name="lblieu">Lieu n°:</string>
    <string name="btabandonne">Abandonner</string>
    <string name="btgo">Continuer</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="labinscr">Inscription</string>
    <string name="labnom">Nom</string>
    <string name="labprenom">Prénom</string>
    <string name="labpseudo">Pseudo</string>
    <string name="labpassword">Mot de passe</string>
    <string name="labpassconfirm">Confirmer mot de passe</string>
    <string name="btinscription">S\'inscrire</string>
    <string name="btclear">Effacer</string>
    <string name="msgfound">Vous avez trouvé!!!</string>
    <string name="msgDesc">Description</string>
    <string name="msgClose">Vous êtes tout près regarder bien autour de vous!</string>
    <string name="msgDescistance">Vous êtes à</string>
    <string name="msgBtAbandon">Ne fonctionne pas!</string>
    <string name="msgFin">Fin de jeu de piste pour cette ville</string>
    <string name="msgCalcul">Calcul de distance en cours</string>
    <string name="msgChargement">Chargement d\'enigmes en cours</string>
    <string name="msgEchec">Echec de la connexion</string>
    <string name="msgError">Erreur</string>
    <string name="msgMaj">Mise à jour de votre lieu recherché</string>
    <string name="msgErrorMaj">Erreur de mis à jour de lieu recherché</string>
    <string name="msgMajOk">Votre lieu a été mis à jour</string>
    <string name="labconnect">Connexion</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="errchampvide">Tous les champs sont obligatoires</string>
    <string name="errpseudoexist">Ce pseudo existe déjà</string>
    <string name="errmdp">Ces mots de passe ne correspondent pas</string>
    <string name="inscrip_ok">Inscription réussie</string>
    <string name="pgd_msg">Traitement des données en cours</string>
    <string name="connexion">Connexion</string>

</resources>
